# godot-3d-reversi

./: .gitignore  LICENSE  README.md
godot-3d-reversi/: default_env.tres  project.godot
godot-3d-reversi/fps_display/: fps.gd  fps_display.tscn
godot-3d-reversi/game/: ai_thinking_label.gd  board.gd  board_mesh.gd  buttons.gd  camera.gd  full_screen.gd  game.tscn  locater.gd  othello_ai.gd  othello_ai.gdnlib  othello_ai.gdns  world_environment.gd
godot-3d-reversi/game_panel/: game_panel.gd  game_panel.tscn
godot-3d-reversi/gameover/: game_over.tscn  game_over_panel.gd
godot-3d-reversi/global/: global.gd
godot-3d-reversi/hint/: hint.tscn
godot-3d-reversi/info/: info.gd  info.tscn
godot-3d-reversi/locater/: locater.tscn
godot-3d-reversi/main_scene/: main.gd  main.tscn  menu_btn.gd
godot-3d-reversi/material/: Wood068_1K_Color.png.import  board.png.import  fabric_256x256.png.import  fabric_black.material  fabric_board.material  fabric_white.material  locate.mesh  metal_256x256.png.import  metal_black.material  metal_white.material  stone.tres  yellow.png.import
godot-3d-reversi/menu/: Menu.tscn  menu.gd
godot-3d-reversi/new_game/: NewGame.tscn  newgame.gd
godot-3d-reversi/pass/: pass.tscn  pass_scene.gd
godot-3d-reversi/picture/: barsHorizontal.png.import  close.png.import  close_hover.png.import  fullscreen_disable.png.import  fullscreen_hover.png.import  (+3 more)
othello-ai-gdnative/: Cargo.toml  build.sh
othello-ai-gdnative/reversi_ai/: Cargo.toml
othello-ai-gdnative/reversi_ai/src/: bitboard.rs  lib.rs  node.rs
othello-ai-gdnative/src/: lib.rs
(+14 files in other folders)
