[package]
name = "othello-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reversi_ai = { path = "reversi_ai" }
gdnative = "0.10"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "3"
lto = true
debug = 0
strip = "symbols"
